# comfyui-popo-utility

./: .gitignore  COMFYUI_TROUBLESHOOTING.md  COMPLETE_TROUBLESHOOTING.md  DEVELOPMENT_GUIDE.md  FIX_LZMA_ISSUE.md  LICENSE  MATH_NODE_SUMMARY.md  PYTHON_UPGRADE_GUIDE.md  README.md  __init__.py  comfyui_node_info.json  demo_math_expression.py  diagnose_comfyui.py  examples.py  fix_lzma.sh  node_template.py  nodes_direct.py  pyproject.toml  setup_dev_env.sh  switch_to_python312.sh  test_comfyui_specific.py  test_math_node.py  test_nodes.py  verify_env.py
nodes/: __init__.py  base_node.py  image_utils.py  registry.py
